--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,10 @@
 repos:
 -   repo: https://github.com/ambv/black
-    rev: ''
+    rev: '22.12.0'
     hooks:
     - id: black
 
 -   repo: https://github.com/pycqa/flake8
-    rev: ''  # pick a git hash / tag to point to
+    rev: '6.0.0'  # pick a git hash / tag to point to
     hooks:
     - id: flake8
