--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,8 @@ repos:
     rev: '6.0.0'  # pick a git hash / tag to point to
     hooks:
     - id: flake8
+
+-   repo: https://github.com/timothycrosley/isort
+    rev: '5.11.4'
+    hooks:
+    -   id: isort
