--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,4 +12,10 @@ repos:
 -   repo: https://github.com/timothycrosley/isort
     rev: '5.11.4'
     hooks:
-    -   id: isort
+    - id: isort
+
+-   repo: https://github.com/econchick/interrogate
+    rev: '1.5.0'  
+    hooks:
+      - id: interrogate
+        args: [--vv, -i, --fail-under=80]
